Fix button alignment, add comments and formatting

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --text-shadow-header: 0 .25em .25em #202020;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #ccc;
@@ -7,11 +11,52 @@ body {
 
 h1, h2, h3, h4 {
     font-weight: bold;
+    text-shadow: var(--text-shadow-header);
+}
+
+main {
+    display: inline-block;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+/* Define secion chunk's styles */
+.top-banner, .main-content {
+    background-color: #505050;
+    padding: 1em;
+    margin-bottom: 1em;
+    border-radius: 1em;
+    box-shadow: 0 .5em .5em #202020;
+    /* box-shadow: 0 1em 1em #202020; */
+}
+
+/* Top navigation BUTTONS styling */
+.links {
+    text-decoration: none;
+    color: #ccc;
+    background-color: #707070;
+    border-radius: .5em;
+    padding: .5em;
+    margin-right: 1em;
+    box-shadow: 0 .25em .25em #303030;
+}
+
+/* top navigation, set spacing */
+.top-banner {
+    display: flex;
+    flex: 1 0 800px;
+    /* width: 800px; */
+    justify-content: space-between;
+}
+
+/* align top navigation buttons */
+.links-group {
+    display: inline-flex;
+    align-items: center;
 }
 
 h1 {
     font-size: xx-large;
-    text-shadow: 0 2px #202020;
 }
 
 h2 {
@@ -20,34 +65,4 @@ h2 {
 
 p {
     line-height: 1.5em;
-}
-
-.top-banner {
-    display: flex;
-}
-
-ul {
-    display: flex;
-    flex-direction:unset;
-    flex-wrap: wrap;
-}
-
-.links {
-    text-decoration: none;
-    color: #ccc;
-    background-color: #707070;
-    border-radius: .5em;
-    padding: .5em;
-    margin-right: 1em;
-    box-shadow: 0 .25em 0 #303030;
-}
-
-/* Define secion styles */
-.top-banner, .main-content {
-    background-color: #505050;
-    padding: 1em;
-    margin-bottom: 1em;
-    border-radius: 1em;
-    box-shadow: 0 .5em 0 #202020;
-    /* box-shadow: 0 1em 1em #202020; */
 }
